
- Added system independent realpath() implementation which caches intermediate
  directories in realpath-cache (Dmitry)
- Added optional clear_realpath_cache and filename parameters to
  clearstatcache(). (Jani, Arnaud)
- Added litespeed SAPI module. (George Wang)
- Added ext/hash support to ext/session's ID generator. (Sara)

- Fixed a bug causing miscalculations with the "last <weekday> of <n> month"
  relative time string. (Derick)

- Fixed bug #45798 (sqlite3 doesn't notice if variable was bound). (Felipe)
- Fixed bug #45763 (mysqli::multi_query does not work with mysqlnd). (Johannes)
- Fixed bug #45757 (FreeBSD4.11 build failure: failed include; stdint.h).
  (Hannes)
- Fixed bug #45717 (Fileinfo/libmagic build fails, missing err.h and getopt.h).
  (Derick)
- Fixed bug #45696 (Not all DateTime methods allow method chaining). (Derick)
- Fixed bug #45636 (fileinfo ext duplicate strndup). (Derick)
- Fixed bug #45545 (DateInterval has 4 char limitation for ISO durations).
  (Derick)
- Fixed bug #45044 (relative paths not resolved correctly). (Dmitry)
- Fixed bug #44100 (Inconsistent handling of static array declarations with
  duplicate keys). (Dmitry)
- Fixed bug #43817 (opendir() fails on Windows directories with parent
  directory unaccessible). (Dmitry)
- Fixed bug #43008 (php://filter uris ignore url encoded filternames and can't
  handle slashes). (Arnaud)

01 Aug 2008, PHP 5.3.0 Alpha 1
- Upgraded bundled PCRE to version 7.7. (Nuno)
- Upgraded bundled PDO sqlite to version 3.5.9. (Scott)

- Moved extensions to PECL (Pierre):
  . ext/dbase
  . ext/fbsql
  . ext/fdf
  . ext/ncurses
  . ext/sybase (not maintained anymore, sybase_ct has to be used instead)

- Removed the experimental RPL (master/slave) functions from mysqli. (Andrey)
- Removed zend.ze1_compatibility_mode. (Dmitry)
- Deprecated ticks support. (Felipe)

- Changed PCRE, Reflection and SPL extensions to be always enabled. (Marcus)